kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  type: LoadBalancer # Creates an AWS Load Balancer (ALB by default for EKS)
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
